<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_action" />
    <item
        android:id="@+id/menu_order_history"
        android:icon="@drawable/ic_order"
        android:title="@string/order_action" />
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart_action" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_action" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help_action" />
</menu>